Remove unused imports and fix findbugs